env/code_53e4d3b8646b5/stderr.txt
  File "main.py", line 3
    print "2"
            ^
SyntaxError: invalid syntax
